<resources>
    <string name="app_name">Vortex</string>
    <string name="title_activity_apk_moy_sredstva_menu">ActivityApkMoySredstvaMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_sliding_menu">testSlidingMenu</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_pishe_prom2">ActivityPisheProm2</string>
    <string name="title_activity_pishe_prom_sravnenie2">ActivityPishePromSravnenie2</string>
    <string name="title_activity_auto_vybor2">ActivityAutoVybor2</string>
    <string name="title_activity_apk2">ApkActivity2</string>
    <string name="title_activity_auto2">ActivityAuto2</string>
    <string name="title_activity_auto_sravnenie2">ActivityAutoSravnenie2</string>
    <string name="title_activity_auto_super_koncentrat2">ActivityAutoSuperKoncentrat2</string>
    <string name="title_activity_auto_super_koncentrat_sravnenie2">
        ActivityAutoSuperKoncentratSravnenie2
    </string>
    <string name="title_activity_apk_moysredstva_main2">ActivityApkMoysredstvaMain2</string>
    <string name="title_activity_apk_moy_sredstva_voda2">ActivityApkMoySredstvaVoda2</string>
    <string name="title_activity_apk_moy_sredstva_for_hoz2">ActivityApkMoySredstvaForHoz2</string>
    <string name="title_activity_apk_moy_sredstva2">ApkMoySredstvaActivity2</string>
    <string name="title_activity_apk_moy_sredstva_sravnenie2">ApkMoySredstvaSravnenieActivity2
    </string>
    <string name="title_activity_apkgigiena_vymeni2">ActivityAPKGigienaVymeni2</string>
    <string name="title_activity_apkgigiena_vymeni_do_doenia2">ActivityAPKGigienaVymeniDoDoenia2
    </string>
    <string name="title_activity_apkgigiena_vymeni_do_doenia_sravnenie2">
        ActivityAPKGigienaVymeniDoDoeniaSravnenie2
    </string>
    <string name="title_activity_apkgigiena_vymeni_express_method2">
        ActivityAPKGigienaVymeniExpressMethod2
    </string>
    <string name="title_activity_apkgigiena_vymeni_express_method_sravnenie2">
        ActivityAPKGigienaVymeniExpressMethodSravnenie2
    </string>
    <string name="title_activity_apkgigiena_vymeni_posle_doenia2">
        ActivityAPKGigienaVymeniPosleDoenia2
    </string>
    <string name="title_activity_apkgigiena_vymeni_posle_doenia_sravnenie2">
        ActivityAPKGigienaVymeniPosleDoeniaSravnenie2
    </string>
    <string name="title_activity_apkkopyta2">ActivityAPKKopyta2</string>
    <string name="title_activity_apkkopyta_desitab_profilakt2">ActivityAPKKopytaDesitabProfilakt2
    </string>
    <string name="title_activity_apkkopyta_desitab_profilakt_usil2">
        ActivityAPKKopytaDesitabProfilaktUsil2
    </string>
    <string name="title_activity_apkkopyta_med_kuporos2">ActivityAPKKopytaMedKuporos2</string>
    <string name="title_activity_apkkopyta_ozdorovlenie2">ActivityAPKKopytaOzdorovlenie2</string>
    <string name="title_activity_apkkopyta_profilaktika2">ActivityAPKKopytaProfilaktika2</string>
    <string name="title_activity_apkdezinfekciya2">ActivityAPKDezinfekciya2</string>
    <string name="title_activity_apkdezinfekciya_profilaktika_forbicid2">
        ActivityAPKDezinfekciyaProfilaktikaForbicid2
    </string>
    <string name="title_activity_apkdezinfekciya_profilaktika_forbicid_sravnenie2">
        ActivityAPKDezinfekciyaProfilaktikaForbicidSravnenie2
    </string>
    <string name="title_activity_apkdezinfekciya_vynujdennaya_forbicid2">
        ActivityAPKDezinfekciyaVynujdennayaForbicid2
    </string>
    <string name="title_activity_apkdezinfekciya_vynujdennaya_forbicid_sravnenie2">
        ActivityAPKDezinfekciyaVynujdennayaForbicidSravnenie2
    </string>
    <string name="title_activity_apkdezinfekciya_tuman2">ActivityAPKDezinfekciyaTuman2</string>
    <string name="title_activity_apkdezinfekciya_tuman_fire2">ActivityAPKDezinfekciyaTumanFire2
    </string>
    <string name="title_activity_apkdezinfekciya_tuman_ice2">ActivityAPKDezinfekciyaTumanIce2
    </string>
    <string name="title_activity_apkdezinfekciya_tuman_ice_animal2">
        ActivityAPKDezinfekciyaTumanIceAnimal2
    </string>
    <string name="lblStoimostSheloch1KG">Стоимость за 1 кг щелочного средства, руб</string>
    <string name="lblStoimostKislot1KG">Стоимость за 1 кг кислотного средства, руб</string>
    <string name="lblStoimostShelochSredstvaRUB">Стоимость щелочного средства, руб</string>
    <string name="lblStoimostKislotSredtstvaRUB">Стоимость кислотного средства, руб</string>
    <string name="lblStoimostObsheeRUB">Общая стоимость средств, руб</string>
    <string name="tvStoimost1KGRUB">Стоимость за 1 кг, руб</string>
    <string name="tvStoimostObrabotkiRUB">Стоимость обработки, руб</string>
    <string name="tvStoimostOdnoyObrabotki">Стоимость одной обработки</string>
    <string name="tvStoimostOdnoyObrabotkiRub">Стоимость одной обработки, руб</string>
    <string name="tvStoimostObrabotkiGolovyRub">Стоимость обработки головы, руб</string>
    <string name="tvStoimostObrabotkiObshayaRub">Стоимость обработки общая, руб</string>
    <string name="tvStoimostObrabotkiPogolovyaRub">Стоимость обработки поголовья, руб</string>
    <string name="tvStoimostKanistryRub">Стоимость канистры, руб</string>
    <string name="tvStoimostObrabotkiKorovyVDenRub">Стоимость обработки коровы в день, руб</string>
    <string name="tvStoimostObrabokiKorovyZaPeriodRub">Стоимость обработки коровы за период, руб</string>
    <string name="tvStoimostObrabotkiZaPeriodRub">Стоимость обработки за период, руб</string>
    <string name="tvStoimostObrabotkiGolovyZaPeriodRub">Стоимость обработки головы за период, руб</string>
    <string name="tvCenaKanistra">Цена, канистра</string>
    <string name="tvStoimosEkspressMoyki">Стоимость экспресс-мойки</string>
    <string name="tvSrednyayaStoimost1Avto">Средняя стоимость 1 авто</string>
    <string name="tvStoimostSuperkoncentrataRub">Стоимость суперконцентрата, руб</string>
    <string name="tvCenaZaKanistruRub">Цена за 1 канистру, руб</string>
    <string name="tvStoimostZapravkiRub">Стоимость заправки, руб</string>
    <string name="tvStoimostmoyki1avto50LPG15avto">Стоимость мойки 1 авто\n(из расчета 50 л ПГ - 15 авто), руб</string>
    <string name="tvStoimostKanistryDrugogoSredstvaRub">Стоимость канистры\nдругого средства, руб</string>
    <string name="tvObshayaStoimostRub">Общая стоимость, руб</string>
    <string name="tvVygoda">ВЫГОДА</string>
    <string name="tvCenaZa1LRub">Цена за 1 л (руб)</string>
    <string name="tvStoimostMoyushegoRastvoraRub">Стоимость моющего раствора (руб)</string>
    <string name="tvStoimostRastvoraRub">Стоимость раствора (руб)</string>
    <string name="tvStoimost">Стоимость</string>
    <string name="tvStoimost1Kg_rub">Стоимость 1кг, руб</string>
    <string name="tvStoimost1L_Rub">Стоимость 1л, руб</string>
    <string name="tvStoimost1PromyvkiRub">Стоимость 1 промывки, руб</string>
    <string name="tvStoimostPromyvochnoysmesi">Стоимость л\nпромывочной смеси</string>
    <string name="tvStoimostRub">Стоимость, руб</string>
    <string name="tvStoimostKg">Стоимость, кг</string>
    <string name="tvStoimostL">Стоимость, л</string>
    <string name="tvStoimostRub_Kg">Стоимость, руб/кг</string>
    <string name="rbMG_e_L">мг - экв/л</string>
    <string name="rbDH">°DH</string>
    <string name="rbJ">°Ж</string>
    <string name="tvPloshad">Площадь, м²</string>
    <string name="tvCenaRUB">Цена, руб</string>
    <string name="tvVesKG">Вес, кг</string>
    <string name="tvKoncentraciyaProcent">Концентрация, %</string>
    <string name="tvRashodL_m2">Расход, л/м²</string>
    <string name="tvEkspoziciyaMin">Экспозиция, мин</string>
    <string name="tvKolichestvoL">Количество, л</string>
    <string name="tvVysotaPomesheniyaM">Высота помещения, м</string>
    <string name="tvVysotaDoKonkaM">Высота до конька, м</string>
    <string name="tvDlinnaM">Длина, м</string>
    <string name="tvShirinaM">Ширина, м</string>
    <string name="tvKratnostObrabotki">Кратность обработки</string>
    <string name="tvObjemPomesheniyaM3">Объем помещения, м³</string>
    <string name="tvEkspoziciyaCH">Экспозиция, ч</string>
    <string name="tvRashodRabochegoRastvoraML_M3">Расход рабочего раствора, мл/м³</string>
    <string name="tvRashodKoncentrataML_M3">Расход концентрата, мл/м³</string>
    <string name="tvRazvedenie_procent">РАЗВЕДЕНИЕ, %</string>
    <string name="tvRashogNaGolovuKG">Расход на 1 голову, кг: </string>
    <string name="tvKolichestvoObrabotokDen">Количество обработок в день</string>
    <string name="tvKolichestvoGigieny">Количество гигиены, кг</string>
    <string name="tvKOlichestvoGolovSHT">Количество голов, шт</string>
    <string name="tvPeriodObrabotkiDni">Период обработки, дней</string>
    <string name="tvCenaUpakovkiRub">Цена упаковки, руб</string>
    <string name="tvVesUpakovkiKG">Вес упаковки, кг</string>
    <string name="tvKolichestvoGolovSht">Количество голов, шт</string>
    <string name="tvNeobhodimoeKolichestvoKg">Необходимое количество, кг</string>
    <string name="tvRashodNaOdnuGolovuGramm">Расход на одну голову, гр: </string>
    <string name="tvObjemVanny">ОБЪЕМ ВАННЫ, Л</string>
    <string name="tvProdoljitelnostDni">Продолжительность, дни</string>
    <string name="tvDesitub_procent">DESITUB, %</string>
    <string name="tvVesovkaKg">Весовка, кг</string>
    <string name="tvKolichestvoObrabotokZaPeriodSht">Количество обработок за период , шт</string>
    <string name="tvKolichestvoVannSht">Количество ванн, шт</string>
    <string name="tvTrebuetsyaDesitubKg">Требуется DESITUB, кг</string>
    <string name="tvKolichestvoObrabotokSht">Количество обработок, шт</string>
    <string name="tvKolichestvoTrebuemogoDesitubKg">Количество требуемого DESITUB, кг</string>
    <string name="tvMednyKuporos_Procent">Медный купорос, %</string>
    <string name="tvKolichestvoObrabotokVDenSht">Количество обработок в день, шт</string>
    <string name="tvTrebuemoeKolichestvoSht">Требуемое количество, шт</string>
    <string name="tvDesimix_Procent">DESIMIX, %</string>
    <string name="tvKolichestvoTrebuemyhVannSht">Количество требуемых ванн, шт</string>
    <string name="tvKolichestvoDesimixKg">Количество DESIMIX, кг</string>
    <string name="tvKolichestvoMednyKuporosKg">Количество медного купороса, кг</string>
    <string name="tvDesemixKg">DESIMIX, кг</string>
    <string name="tvMednyKuporosKg">Медный купорос, кг</string>
    <string name="btnResult">рассчитать</string>
    <string name="btnSrav">Сравнить с другим средством</string>
    <string name="lblKolichestvoKorov">Количество дойных коров, шт</string>
    <string name="lblKolichestvoDoekDen">Количество доек в день</string>
    <string name="lblKoncentraciyzShelochi">Концентрация щелочи,%</string>
    <string name="lblKoncentraciyzKisloty">Концентрация кислоты,%</string>
    <string name="lblKolichestvoShelochMoek">Количество щелочных моек</string>
    <string name="lblKolichestvoKislotMoek">Количество кислотных моек</string>
    <string name="lblObjemVanna">Объем промывочной ванны, л</string>
    <string name="lblKolichestvoDney">Количество дней</string>
    <string name="lblSrednPlotnostKG_L">Средняя плотность средства, кг/л</string>
    <string name="lblObsheeKolichestvoMoySredstvKG">Общее количество моющих средств, кг</string>
    <string name="lblKolichestvoShelochSredstvaKG">Количество щелочного средства, кг</string>
    <string name="lblKolichestvoKislotSredstvaKG">Количество кислотного средства, кг</string>
    <string name="tvVidObrabotki">Вид обработки</string>
    <string name="tvProtiranieOroshenie">Протирание, орошение, генерирование пены</string>
    <string name="tvKolichestvoForbicidKG">Количество FORBICID, кг</string>
    <string name="tvRastvorObyazatelnoSmyvat">РАСТВОР ПОСЛЕ ДЕЗИНФЕКЦИИ ОБЯЗАТЕЛЬНО СМЫВАТЬ</string>
</resources>