<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vortex.vortex.ActivityApkMoySredstvaForHoz2"
    tools:showIn="@layout/app_bar_activity_apk_moy_sredstva_for_hoz2">

    <ScrollView
        android:id="@+id/scrollview"
        style="@style/scrollView">

        <LinearLayout style="@style/linearLayoutInputData">

            <TableLayout style="@style/tableViewInputData">

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/lblKolichestvoKorov" />

                    <EditText
                        android:id="@+id/edKolichKorov"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/lblKolichestvoDoekDen" />

                    <EditText
                        android:id="@+id/etKolichDoek"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/lblKoncentraciyzShelochi" />

                    <EditText
                        android:id="@+id/etKoncentratSheloch"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/lblKoncentraciyzKisloty" />

                    <EditText
                        android:id="@+id/etKoncentratKislot"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/lblKolichestvoShelochMoek" />

                    <EditText
                        android:id="@+id/etKolichShelochMoek"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/lblKolichestvoKislotMoek" />

                    <EditText
                        android:id="@+id/etKolichKislotMoek"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/lblObjemVanna" />

                    <EditText
                        android:id="@+id/etVanna"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/lblKolichestvoDney" />

                    <EditText
                        android:id="@+id/etDay"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/lblStoimostSheloch1KG" />

                    <EditText
                        android:id="@+id/etPriceSheloch"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/lblStoimostKislot1KG" />

                    <EditText
                        android:id="@+id/edPriceKislot"
                        style="@style/editTextInputData" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/btnRaschet"
                style="@style/buttonResult"
                android:onClick="onClickResult"
                android:text="@string/btnResult" />

            <TableLayout
                android:id="@+id/tableL"
                style="@style/tableLayoutResult">

                <TableRow style="@style/tableRowResultFirst">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/lblSrednPlotnostKG_L" />

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/textViewResultRight"
                        android:text="1.22" />

                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/lblObsheeKolichestvoMoySredstvKG" />

                    <TextView
                        android:id="@+id/tvKolichSredstvKg"
                        style="@style/textViewResultRight" />

                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/lblKolichestvoShelochSredstvaKG" />

                    <TextView
                        android:id="@+id/tvKolichShelochKg"
                        style="@style/textViewResultRight" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/lblKolichestvoKislotSredstvaKG" />

                    <TextView
                        android:id="@+id/tvKolichKislotKg"
                        style="@style/textViewResultRight" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/lblStoimostShelochSredstvaRUB" />

                    <TextView
                        android:id="@+id/tvPriceSheloch"
                        style="@style/textViewResultRight" />

                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/lblStoimostKislotSredtstvaRUB" />

                    <TextView
                        android:id="@+id/tvPriceKislot"
                        style="@style/textViewResultRight" />

                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/lblStoimostObsheeRUB" />

                    <TextView
                        android:id="@+id/tvPriceObsh"
                        style="@style/textViewResultRight" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
