<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vortex.vortex.ActivityAPKDezinfekciyaVynujdennayaForbicid2"
    tools:showIn="@layout/app_bar_activity_apkdezinfekciya_vynujdennaya_forbicid2">

    <ScrollView style="@style/scrollView">

        <LinearLayout style="@style/linearLayoutInputData">

            <TableLayout style="@style/tableViewInputData">

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        astyle="@style/textViewInputData"
                        android:text="@string/tvPloshad" />

                    <EditText
                        android:id="@+id/etS"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/tvCenaRUB" />

                    <EditText
                        android:id="@+id/etPrice"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/tvVesKG" />

                    <EditText
                        android:id="@+id/etVes"
                        style="@style/editTextInputData" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/btnRaschet"
                style="@style/buttonResult"
                android:onClick="onClickRaschet"
                android:text="@string/btnResult" />

            <TableLayout
                android:id="@+id/tableL"
                style="@style/tableLayoutResult">

                <TableRow style="@style/tableRowResultFirst">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvVidObrabotki" />

                    <TextView
                        android:id="@+id/textView35"
                        style="@style/textViewResultRight"
                        android:text="@string/tvProtiranieOroshenie" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvKoncentraciyaProcent" />

                    <TextView
                        android:id="@+id/tvKoncentraciya"
                        style="@style/textViewResultRight"
                        android:text="0.5" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvRashodL_m2" />

                    <TextView
                        android:id="@+id/tvRashod"
                        style="@style/textViewResultRight"
                        android:text="0.5" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvEkspoziciyaCH" />

                    <TextView
                        android:id="@+id/tvEkspoziciya"
                        style="@style/textViewResultRight"
                        android:text="1" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvStoimost1KGRUB" />

                    <TextView
                        android:id="@+id/tvStoimostKg"
                        style="@style/textViewResultRight" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvKolichestvoForbicidKG" />

                    <TextView
                        android:id="@+id/tvKolichForbicid"
                        style="@style/textViewResultRight" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvStoimostObrabotkiRUB" />

                    <TextView
                        android:id="@+id/tvStoimostObrabotki"
                        style="@style/textViewResultRight" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        android:id="@+id/textView49"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="17dp"
                        android:layout_span="8"
                        android:text="@string/tvRastvorObyazatelnoSmyvat"
                        android:textColor="@color/colorRed"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/button11"
                style="@style/buttonCompare"
                android:onClick="onClickSravnenie"
                android:text="@string/btnSrav" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
