<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vortex.vortex.ActivityAPKDezinfekciyaTumanIceAnimal2"
    tools:showIn="@layout/app_bar_activity_apkdezinfekciya_tuman_ice_animal2">

    <ScrollView style="@style/scrollView">

        <LinearLayout style="@style/linearLayoutInputData">

            <TableLayout style="@style/tableViewInputData">

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/tvVysotaPomesheniyaM" />

                    <EditText
                        android:id="@+id/etVysota"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/tvVysotaDoKonkaM" />

                    <EditText
                        android:id="@+id/etVysotaKon"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/tvDlinnaM" />

                    <EditText
                        android:id="@+id/etDlinna"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/tvShirinaM" />

                    <EditText
                        android:id="@+id/etShirina"
                        style="@style/editTextInputData" />
                </TableRow>

                <TableRow style="@style/tableRowInputData">

                    <TextView
                        style="@style/textViewInputData"
                        android:text="@string/tvKratnostObrabotki" />

                    <EditText
                        android:id="@+id/etKratnost"
                        style="@style/editTextInputData" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/btnRaschet"
                style="@style/buttonResult"
                android:onClick="onClickRaschet"
                android:text="@string/btnResult" />

            <TableLayout
                android:id="@+id/tableL"
                style="@style/tableLayoutResult">

                <TableRow style="@style/tableRowResultFirst">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvObjemPomesheniyaM3" />

                    <TextView
                        android:id="@+id/tvObjem"
                        style="@style/textViewResultRight" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvEkspoziciyaCH" />

                    <TextView
                        android:id="@+id/tvEkspoz"
                        style="@style/textViewResultRight" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvKoncentraciyaProcent" />

                    <TextView
                        android:id="@+id/tvKoncentr"
                        style="@style/textViewResultRight" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvRashodRabochegoRastvoraML_M3" />

                    <TextView
                        android:id="@+id/tvRashodRastvora"
                        style="@style/textViewResultRight" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvRashodKoncentrataML_M3" />

                    <TextView
                        android:id="@+id/tvRashodKoncentrata"
                        style="@style/textViewResultRight" />
                </TableRow>

                <TableRow style="@style/tableRowResultOther">

                    <TextView
                        style="@style/textViewResultLeft"
                        android:text="@string/tvKolichestvoForbicidKG" />

                    <TextView
                        android:id="@+id/tvForbicida"
                        style="@style/textViewResultRight" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
